--- a/api/home-page/models/home-page.settings.json
+++ b/api/home-page/models/home-page.settings.json
@@ -14,6 +14,12 @@
   "attributes": {
     "gear_lists": {
       "collection": "gear-list"
+    },
+    "galleries": {
+      "collection": "studio-gallery"
+    },
+    "artists": {
+      "collection": "discographies"
     }
   }
 }
