--- a/api/home-page/models/home-page.settings.json
+++ b/api/home-page/models/home-page.settings.json
@@ -20,6 +20,9 @@
     },
     "artists": {
       "collection": "discographies"
+    },
+    "playlists": {
+      "collection": "playlists"
     }
   }
 }
